# kernel_img_proc

./: CMakeLists.txt  Image.h  README.md  main.cpp  tests.cpp  utils.cpp  utils.h
elaborato_presentazione/: Kernel-image-processing_Amatori.odp
